--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root{
+  --image: https://i.pinimg.com/736x/9a/b8/4a/9ab84ae714d32afef91719f328483dec.jpg;
+}
+
+.backgroundLogin {
+  background: url(../public/transferir.jpeg) no-repeat top center;
+  background-size: cover;
+  height: 100vh;
+
+}
